# feed-scraper

./: .gitignore  docker-compose.yml
.github/workflows/: main.yml
feed-scraper/: pyproject.toml
feed-scraper/logs/: logs.py
feed-scraper/src/: celery.py  main.py  producer_tasks.py  service.py  settings.py
feed-scraper/tests/: test_scraper.py
innonews/: pyproject.toml
innonews/src/: main.py  service.py  settings.py
